--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "devDependencies": {
     "broccoli": "~0.12.3",
-    "broccoli-static-compiler": "~0.1.4",
     "broccoli-clean-css": "~0.2.0",
+    "broccoli-cli": "^1.0.0",
     "broccoli-gzip": "~0.2.0",
     "broccoli-htmlmin": "~0.2.0",
-    "street": "~0.6.0",
-    "grunt": "~0.4.5"
+    "broccoli-static-compiler": "~0.1.4",
+    "grunt": "~0.4.5",
+    "street": "~0.6.0"
   },
   "scripts": {
     "build": "rm -rf dist/ && broccoli build dist"
