--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ copyright = "&copy; Copyright 2019 Thomas Groshong Jr"
   name = "Tommy Groshong"
   gravatar = "3ef06d69d25df6c31fb095cfc6b08178"
 
-  twitter = "tgroshon"
+  twitter = "TommyGroshong"
   linkedin = "thomas-groshong-2b23aa28"
   github = "tgroshon"
   stackoverflow = "2631962"
